--- a/book-appointment.html
+++ b/book-appointment.html
@@ -127,5 +127,10 @@
             </form>
         </div>
     </main>
+
+    <!-- Add these before closing body tag -->
+    <script src="js/config.js"></script>
+    <script src="js/api.js"></script>
+    <script src="js/booking.js"></script>
 </body>
 </html>
